# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.MD  pyproject.toml  test3.json
gendiff/: __init__.py  cli.py  constants.py  engine.py
gendiff/comparison/: comparator.py
gendiff/diff_getter/: ast_builder.py  engine.py
gendiff/formatters/: constants.py  m_json.py  plain.py  string.py
gendiff/scripts/: gendiff.py
tests/: test_getdiff.py
tests/fixtures/: test_flat_new.json  test_flat_old.json  test_nested_new.json  test_nested_old.json
tests/test_cases/: test2.json  test4.json
