[tool.poetry]
name = "kulakoff1988_gendiff"
version = "0.1.0"
description = "The program for files comparison"
authors = ["Aleksandr Kulakov <kulakofft4@gmail.com>"]
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
PyYAML = "^5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

